# MFE-Driverless-V1

./: .gitattributes  .gitignore  .gitmodules  README.md  build_and_launch.Unix.sh  build_and_launch.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
Docker/dev/: Dockerfile  DockerfileOld  docker-compose.yml
Docker/dev-cuda/: Dockerfile
Docker/dev/shared/: fast.xml
Docker/fs-driverless-sim/: Dockerfile  compose.yaml  entrypoint.sh
Docker/isaac/: Dockerfile
Docker/jetson/: Dockerfile
Docker/mac/: Dockerfile
docs/: architecture.md  docker.md  fleet.md  index.md  jetson_setup.md  networking.md  nodes.md  packages.md  rl_training.md  scripts.md  simulation.md  simulation_guide.md  training.md  troubleshooting.md  vehicle.md
docs/.obsidian/: workspace.json
ros2/: README.md  structure.txt
ros2/src/mfe/: CMakeLists.txt  package.xml
ros2/src/mfe_base/: CMakeLists.txt  package.xml
ros2/src/mfe_bringup/: CMakeLists.txt  package.xml
ros2/src/mfe_bringup/config/: cyclone_tailscale.xml  vehicle.yaml
ros2/src/mfe_bringup/launch/: bringup.launch.py  compute.launch.py  fleet.launch.py  navigation.launch.py  perception.launch.py
ros2/src/mfe_control/: package.xml  setup.cfg  setup.py
ros2/src/mfe_control/mfe_control/: pure_pursuit_node.py  rl_policy_node.py
ros2/src/mfe_eufs_sim/: package.xml  setup.cfg  setup.py
ros2/src/mfe_eufs_sim/launch/: mfe_eufs_sim.launch.py
ros2/src/mfe_eufs_sim/mfe_eufs_sim/: bridge_node.py
ros2/src/mfe_mapping/: CMakeLists.txt  package.xml
ros2/src/mfe_mapping/config/: slam_toolbox_params.yaml
ros2/src/mfe_mapping/launch/: slam_toolbox.launch.py
ros2/src/mfe_msgs/: CMakeLists.txt  package.xml
ros2/src/mfe_msgs/msg/: Cone.msg  ConeStamped.msg  ConeWithCovariance.msg  ROSStateStamped.msg  StateInfo.msg
ros2/src/mfe_msgs/srv/: Reset.srv
ros2/src/mfe_navigation/: CMakeLists.txt  package.xml
ros2/src/mfe_path_planning/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2/src/mfe_path_planning/mfe_path_planning/: boundary_extractor.py  finish_detector_node.py  lap_validator_node.py  path_planner_node.py
ros2/src/mfe_perception/lidar_cone_detector/: CMakeLists.txt  package.xml
ros2/src/mfe_perception/lidar_cone_detector/include/lidar_cone_detector/: cone_detector.hpp  file_loader.hpp  ground_plane_removal.hpp  lidar_preprocessor.hpp
ros2/src/mfe_perception/lidar_cone_detector/launch/: file_loader.launch.py  lidar_bringup.py  lidar_pipeline.launch.py  pointcloud_to_laserscan.launch.py
ros2/src/mfe_perception/lidar_cone_detector/lidar_cone_detector/: cone_detector.py
ros2/src/mfe_perception/lidar_cone_detector/scripts/: cone_detector_node.py
ros2/src/mfe_perception/lidar_cone_detector/src/: cone_detection.py  cone_detector.cpp  dbscan.cpp  file_loader.cpp  ground_plane_removal.cpp  lidar_perception_node.cpp  lidar_preprocessor.cpp  lidar_processor.cpp
ros2/src/mfe_perception/mfe_perception_core/: CMakeLists.txt  package.xml
ros2/src/mfe_perception/mfe_perception_core/include/: base_driver_node.hpp
ros2/src/mfe_perception/perception_evaluator/: package.xml  setup.cfg  setup.py
ros2/src/mfe_perception/perception_evaluator/perception_evaluator/: evaluator_node.py  fusion_evaluator_node.py
ros2/src/mfe_perception/state_estimation/: CMakeLists.txt  package.xml
ros2/src/mfe_perception/vision_cone_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2/src/mfe_perception/vision_cone_detector/launch/: camera_pipeline.launch.py  file_loader.launch.py  vision_pipeline.launch.py
ros2/src/mfe_perception/vision_cone_detector/src/: cone_detection.py
ros2/src/mfe_perception/vision_cone_detector/vision_cone_detector/: cone_detection.py  cone_detection_node.py  depth_detection_node.py  file_loader.py  frame_generator.py
ros2/src/mfe_sensors/: CMakeLists.txt  package.xml
ros2/src/mfe_sensors/include/mfe_sensors/drivers/: camera_driver_node.hpp  lidar_driver_node.hpp
ros2/src/mfe_sensors/include/mfe_sensors/interfaces/: camera_interface.hpp  lidar_interface.hpp  sensor_node.hpp
ros2/src/mfe_sensors/launch/: pointcloud_to_laserscan.launch.py  sensors.launch.py
ros2/src/mfe_sensors/src/: camera_interface.cpp  lidar_driver_node.cpp  lidar_interface.cpp  sim_lidar_node.cpp  velodye_lidar_node.cpp
ros2/src/mfe_simulation/: CMakeLists.txt  package.xml
ros2/src/mfe_simulation/include/: fsds_node.cpp
ros2/src/mfe_simulation/launch/: fs_driverless_sim.launcch.py  sim.launch.py
ros2/src/mfe_simulation/mfe_simulation/: carmaker_interface.py  carmaker_node.py
ros2/src/mfe_state_estimation/: package.xml  setup.cfg  setup.py
ros2/src/mfe_state_estimation/config/: ekf.yaml  ekf_navsat.yaml  ekf_params.yaml  gps.yaml
ros2/src/mfe_state_estimation/launch/: ekf_localization.launch.py  ekf_slam.launch.py  gps_transform.launch.py
ros2/src/mfe_state_estimation/mfe_state_estimation/: base_transformations.py  extended_kalman_filter_node.py  odom_transformer.py
ros2/src/mfe_state_estimation/mfe_state_estimation/filters/: extended_kalman_filter.py  kalman_filter.py
ros2/src/mfe_state_estimation/mfe_state_estimation/models/: imu_prediction_model.py
ros2/src/mfe_tests/: README.md
rosbags/amz-vision-2017/: amz-vision-2017.db3  metadata.yaml
scripts/: build_gazebo_from_source.sh  docker_build.sh  docker_run.sh  docker_run_mac.sh  docker_train_rl.sh  launch_sim.sh  run_laps.sh  setup_jetson.sh  setup_linux.sh  setup_mac.sh  setup_remote.sh  start_rl_envs.sh  train_rl.sh
training/rl/: README.md  collect_demos.py  mfe_env.py  policy.py  train_bc.py  train_ppo.py
training/yolo/: prepare_dataset.py  train.py
