<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mfe_mapping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="albert@todo.todo">albert</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <depend>mfe_state_estimation</depend>
  
  <depend>robot_localization</depend>
  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>
  
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
