<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mfe_simulation</name>
  <version>0.0.0</version>
  <description>Simulation Communication Package for Connection with IPG Simulations @ McGill Formula-E </description>

  <maintainer email="root@todo.todo">McGill Formula Electric</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools for Python -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Runtime dependencies -->
  <exec_depend>numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
