<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_cone_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="albert@todo.todo">albert</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>pcl_msgs</depend>

  <depend>rclcpp</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <depend>rclpy</depend>
  <depend>python3-sklearn</depend>

  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-features</exec_depend>
  <exec_depend>libpcl-filters</exec_depend>
  <exec_depend>libpcl-io</exec_depend>
  <exec_depend>libpcl-segmentation</exec_depend>
  <exec_depend>libpcl-surface</exec_depend>
  <exec_depend>libpcl-visualization</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
